feat: adding tests for repositories, services and controllers
