# src/api/middlewares/auth_middleware.go
@@ -9,7 +9,7 @@ import (
 
 func APIKeyMiddleware() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		apiKey := c.GetHeader("x-api-key")
+		apiKey := c.GetHeader("X-Api-Key")
 
 		if apiKey == "" {
 			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{"error": "Missing API key"})
